Drive the kernel module through a platform service instead of root
On a ROM that ships amneziawg.ko and a matching sepolicy the tunnel can be
a kernel netdev and the app needs no root — but it cannot do the work
itself either.  Two neverallow rules in system/sepolicy close that path
for any app: netd.te forbids appdomain from calling netd over binder,
which rules out awg-quick, and app_neverallows.te forbids netlink_generic
sockets, which rules out even reading state with `awg show`.  Upstream
steps around both with su.

So the app asks a privileged init service instead.  ServiceControl is the
whole protocol: write the config to /data/misc/amneziawg/<name>.conf, put
the name in sys.amneziawg.iface, start amneziawg_up or _down through
ctl.start, and read the result back from sys.amneziawg.result; statistics
come from a status file the service keeps refreshed, and the module
version is read straight from /sys/module/amneziawg/version, which needs
no privilege.  AwgQuickBackend loses every rootShell and toolsInstaller
call, Application always picks that backend, and the Go backend and the
native build go away with it — awg and awg-quick arrive from the ROM.
The APK drops from 17.8 MB to about 3 MB.

Three smaller things, each found on a device:

  - The VpnService declaration is gone.  Nothing starts it once the Go
    backend is out, but leaving it declared made Android offer always-on
    VPN and then report "disconnected from always-on VPN" forever; with
    lockdown enabled it would have blocked all traffic waiting for a
    service that never comes.

  - onNetworkChange no longer re-creates the socket.  The service watches
    the interface the tunnel's own packets leave through, which is the
    only signal that catches a wifi -> mobile switch: ConnectivityManager
    reports the loss first, so the new network arrives as "initial" and
    NetworkState skips the callback entirely.  The call only ever fired on
    the way back and cost a second, pointless rebind.

